--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ body {
 
 .content.dark-background,
 .content.dark-background-transparent {
-  box-shadow: rgba(255, 255, 255, 0.08) 0px 1px 30px 5px, rgba(255, 255, 255, 0.08) 0px 0px 0px 1px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 30px 5px, rgba(255, 255, 255, 0.08) 0px 0px 0px 1px;
 }
 
 .mobile-content {
@@ -79,15 +79,20 @@ body {
 }
 
 .mobile-content.dark-background-transparent {
-  box-shadow: rgba(255, 255, 255, 0.05) 0px 6px 24px 0px, rgba(255, 255, 255, 0.08) 0px 0px 0px 1px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 6px 24px 0px, rgba(255, 255, 255, 0.08) 0px 0px 0px 1px;
 }
 
 .window-content {
   overflow: auto;
   height: 100%;
   padding: 10px;
-  border-radius: 20px 20px 15px 15px;
+  border-radius: 12px;
   margin: 0px 5px 5px 5px;
+}
+
+.window-content.light-background,
+.window-content.dark-background {
+  border-radius: 0px 12px 12px 12px;
 }
 
 .info {
@@ -102,7 +107,8 @@ body {
   position: fixed;
   bottom: 10px;
   z-index: 1;
-  height: 60px;
+  height: 50px;
+  max-height: 50px;
   gap: 20px;
   margin-left: 10px;
   margin-right: 10px;
@@ -117,6 +123,7 @@ body {
   border-radius: 12px;
   gap: 10px;
   width: 100%;
+  box-shadow: none !important;
 }
 
 .taskbar:hover {
@@ -208,7 +215,7 @@ body {
 
 .main-container {
   height: 100%;
-  transition: background 0.3s ease 0s;
+  /* transition: background 0.3s ease 0s; */
 }
 
 .personal-info {
@@ -298,12 +305,13 @@ body {
 }
 
 .search-area {
-  height: 60px;
+  height: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 15px;
 }
 
 @media screen and (max-width: 250px) {
@@ -534,22 +542,27 @@ body {
 
 .blur-5 {
   backdrop-filter: blur(50px);
+  transform: translateZ(0);
 }
 
 .blur-4 {
   backdrop-filter: blur(40px);
+  transform: translateZ(0);
 }
 
 .blur-3 {
   backdrop-filter: blur(30px);
+  transform: translateZ(0);
 }
 
 .blur-2 {
   backdrop-filter: blur(20px);
+  transform: translateZ(0);
 }
 
 .blur-1 {
   backdrop-filter: blur(10px);
+  transform: translateZ(0);
 }
 
 .bd-b {
@@ -568,22 +581,6 @@ body {
   border-left: 0.7px solid #ccc;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes blink-caret {
-  50% {
-    opacity: 0
-  }
-}
-
 .not-support-message {
   display: none;
   font-weight: 900;
@@ -592,10 +589,15 @@ body {
 
 .action-bar {
   position: relative;
-  min-height: 55px;
+  min-height: 45px;
   display: flex;
   align-items: center;
   transition: background-color 0.3s ease-in-out, opacity 0.15s linear 0s, visibility 0.15s linear 0s;
+}
+
+.xp-style {
+  background-image: linear-gradient(to right, #0026cd, transparent 5%, transparent 95%, #0026cd), linear-gradient(#1777cf, #058ffe 2%, #058ffe 5%, #004be5 15%, #004be5 50%, #005fff 80%, #0044c5);
+  /* background: linear-gradient(180deg,#0997ff,#0053ee 8%,#0050ee 40%,#06f 88%,#06f 93%,#005bff 95%,#003dd7 96%,#003dd7); */
 }
 
 .action-bar.hidden {
@@ -624,8 +626,9 @@ body {
   align-content: center;
   align-items: center;
   height: 35px;
-  border-radius: 20px;
-  margin-right: 10px;
+  border-radius: 12px;
+  margin-right: 5px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
 .action-buttons>.action-icon {
@@ -638,32 +641,62 @@ body {
   min-height: 35px;
   background: none;
   border: none;
-  border-radius: 50%;
   transition: background-color 0.3s linear 0.1s;
+  cursor: pointer;
 }
 
 .action-buttons>.action-icon:hover {
   background-color: #9f9f9fd6;
-  cursor: pointer;
-  transition: background-color 0.3s linear 0.1s;
+}
+
+.action-buttons>.action-icon:nth-child(1) {
+  border-radius: 12px 0px 0px 12px;
+}
+
+.action-buttons>.action-icon:nth-child(3) {
+  border-radius: 0px 12px 12px 0px;
 }
 
 .action-buttons>.action-icon:last-child:hover {
   background-color: #ff4000d6;
 }
 
-.app-name {
+.tab-name {
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: 12px 12px 0px 0px;
   min-height: 35px;
   height: 35px;
-  margin-left: 10px;
+  margin-left: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 13px;
   width: 200px;
   min-width: 100px;
+  position: relative;
+}
+
+.tab-name.blur-3 {
+  border-radius: 12px;
+}
+
+.tab-name>.layout {
+  height: 10px;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+}
+
+.tab-name.blur-3>.layout {
+  display: none;
+}
+
+.tab-name.light-background>.layout {
+  background-color: #f1f3f4;
+}
+
+.tab-name.dark-background>.layout {
+  background-color: rgba(34, 39, 46, 1);
 }
 
 .input-bar {
@@ -708,14 +741,14 @@ body {
   cursor: pointer;
 }
 
-.taskbar>.main,
-.taskbar>.weather-area,
-.taskbar>.tools-and-time {
+.taskbar>.taskbar-area {
   display: flex;
-  gap: 5px;
-  border-radius: 30px;
+  gap: 10px;
+  border-radius: 15px;
   flex-direction: row;
   align-items: center;
+  max-height: 50px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 }
 
 .taskbar-space {
@@ -724,18 +757,21 @@ body {
 
 .application-area>.application {
   position: relative;
-  height: 60px;
-  width: 60px;
+  height: 50px;
   min-height: 40px;
   min-width: 40px;
   display: flex;
+  gap: 10px;
   align-items: center;
-  justify-content: center;
-  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  border-radius: 50%;
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out, width 0.3s ease-in-out;
+  border-radius: 15px;
 }
 
-.application>img {
+.application > .app-name {
+  font-weight: bold;
+}
+
+.application>img.app-icon {
   width: 40px;
   height: 40px;
   border-radius: 12px;
@@ -748,26 +784,33 @@ body {
   cursor: pointer;
 }
 
-.application-area>.application:hover>img {
+.application-area>.application:hover>img.app-icon {
   transform: scale(1.15);
 }
 
-.main>.application:hover>img {
+.main>.application:hover>img.app-icon {
   box-shadow: 0px 0px 10px 3px rgb(22 119 255);
+}
+
+
+.main>.application>img {
+  height: 35px;
+  width: 35px;
 }
 
 .main>.application {
   cursor: pointer;
   border-radius: none;
   position: relative;
-  height: 60px;
-  width: 60px;
-  min-height: 60px;
-  min-width: 60px;
+  height: 50px;
+  width: 50px;
+  min-height: 40px;
+  min-width: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
+  border-radius: 15px;
+  gap: 5px;
 }
 
 .search-input {
@@ -784,11 +827,11 @@ body {
   align-items: center;
   align-content: center;
   justify-content: center;
-  border-radius: 20px;
+  border-radius: 12px;
   height: 40px;
   gap: 10px;
   min-width: 100px;
-  margin-left: 10px;
+  margin-left: 5px;
   transition: background-color 0.2s ease-in-out 0s;
   position: relative;
 }
@@ -799,8 +842,8 @@ body {
   height: 40px;
   justify-content: center;
   align-items: center;
-  margin-right: 10px;
-  border-radius: 30px;
+  margin-right: 5px;
+  border-radius: 12px;
   transition: background-color 0.2s ease-in-out 0s;
   position: relative;
 }
@@ -846,7 +889,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 30px;
+  border-radius: 12px;
   width: 50px;
   cursor: default;
   transition: background-color 0.2s ease-in-out 0s;
@@ -1093,6 +1136,7 @@ body {
   align-items: center;
   align-content: center;
   padding: 10px;
+  position: relative;
 }
 
 .setting-detail-content {
@@ -1121,6 +1165,18 @@ body {
 .color-select-container {
   min-height: 40px;
   width: 100%;
+  position: relative;
+}
+
+.disabled-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #b3b3b352;
+  z-index: 22;
+  cursor: not-allowed;
 }
 
 .color-selection {
@@ -1470,9 +1526,9 @@ h1.summary-title {
 .weather {
   overflow: hidden;
   position: relative;
-  height: 60px;
+  height: 50px;
   min-width: 100px;
-  border-radius: 30px;
+  border-radius: 15px;
 }
 
 .starting-screen {
@@ -1545,7 +1601,7 @@ h1.summary-title {
 
 .notifications {
   position: absolute;
-  bottom: 80px;
+  bottom: 70px;
   right: 10px;
   width: 300px;
   height: 500px;
@@ -1714,7 +1770,7 @@ h1.summary-title {
 
 .quick-settings {
   position: absolute;
-  bottom: 80px;
+  bottom: 70px;
   right: 10px;
   width: 300px;
   height: 400px;
@@ -2000,7 +2056,7 @@ h1.summary-title {
 .window-new-feeds {
   z-index: 18;
   position: absolute;
-  bottom: 80px;
+  bottom: 70px;
   left: 10px;
   width: 600px;
   height: 600px;
@@ -2049,4 +2105,43 @@ h1.summary-title {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+}
+
+.windows-xp-tab {
+
+}
+
+.windows-xp-tab {
+  position: relative;
+  height: 40px;
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out, width 0.3s ease-in-out;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #3c81f3;
+  box-shadow: inset -1px 0 rgba(0,0,0,.3),inset 1px 1px 1px hsla(0,0%,100%,.2);
+}
+
+.windows-xp-tab > .app-name {
+  font-weight: bold;
+  color: white;
+}
+
+.windows-xp-tab>img.app-icon {
+  width: 33px;
+  height: 33px;
+  border-radius: 12px;
+  transition: transform 0.3s ease-in-out, box-shadow 0.6s ease-in-out;
+}
+
+.windows-xp-tab:hover {
+  background-color: #00379eea !important;
+}
+
+.windows-xp-tab.opened-app {
+  background-color: #0044c5;
 }
