fixed some issues related to the device dimensions, now the devices have a screen width of less than 1280px can not use the computer features

--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,7 @@ body {
 
 .mobile-content {
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  border-radius: 15px !important;
 }
 
 .mobile-content.dark-background-transparent {
@@ -338,34 +339,6 @@ body {
   }
 }
 
-@media screen and (max-width: 500px) {
-
-  .applications-area>.application:nth-child(5) {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 430px) {
-
-  .applications-area>.application:nth-child(4) {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 360px) {
-
-  .applications-area>.application:nth-child(3) {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 300px) {
-
-  .applications-area>.application:nth-child(2) {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 320px) and (min-width: 280px) {
 
   .summary-text-content {
@@ -392,7 +365,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
   .main-container {
     margin-right: auto;
     margin-left: auto;
@@ -758,6 +731,7 @@ body {
 .application-area>.application {
   position: relative;
   height: 50px;
+  width: 50px;
   min-height: 40px;
   min-width: 40px;
   display: flex;
@@ -876,6 +850,11 @@ body {
 
 .tool-area:hover {
   background-color: #cccccca3;
+}
+
+.tool-area.xp-style-hover {
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
 }
 
 .date-and-time:hover {
@@ -2108,12 +2087,10 @@ h1.summary-title {
 }
 
 .windows-xp-tab {
-
-}
-
-.windows-xp-tab {
   position: relative;
   height: 40px;
+  width: 100%;
+  max-width: 200px;
   min-height: 40px;
   min-width: 40px;
   display: flex;
@@ -2129,6 +2106,12 @@ h1.summary-title {
 .windows-xp-tab > .app-name {
   font-weight: bold;
   color: white;
+  font-size: 0.7rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  white-space: nowrap;
 }
 
 .windows-xp-tab>img.app-icon {
