--- a/src/styles.css
+++ b/src/styles.css
@@ -110,7 +110,7 @@ body {
   z-index: 1;
   height: 50px;
   max-height: 50px;
-  gap: 20px;
+  gap: 10px;
   margin-left: 10px;
   margin-right: 10px;
   transition: transform 0.3s ease-in-out;
@@ -1506,14 +1506,6 @@ h1.summary-title {
   color: #0871c6;
 }
 
-.weather {
-  overflow: hidden;
-  position: relative;
-  height: 50px;
-  min-width: 100px;
-  border-radius: 15px;
-}
-
 .starting-screen {
   position: absolute;
   background-color: #000000;
@@ -2206,4 +2198,42 @@ h1.summary-title {
 
 .window-resize-left-cursor {
   cursor: w-resize !important;
+}
+
+.weather-area {
+  width: max-content;
+}
+
+.weather {
+  position: relative;
+  height: 50px;
+  min-width: 100px;
+  border-radius: 15px;
+  width: 200px;
+}
+
+.weather-component {
+  display: flex;
+  align-items: center;
+  position: relative;
+  gap: 5px;
+}
+
+.weather-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 15px;
+}
+
+.weather-icon > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+
+.weather-status {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  font-weight: bold;
 }
